grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    pass_statement: _ => prec.left('pass'),
    function_definition: $ => seq(
      optional('async'),
      choice('def', 'fn'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional(choice(
        // raises only, no return type
        $.raises_clause,
        // raises before return type
        seq($.raises_clause, '->', field('return_type', $.type)),
        // return type only, no raises
        seq('->', field('return_type', $.type)),
        // return type then raises
        seq('->', field('return_type', $.type), $.raises_clause),
      )),
      ':',
      field('body', $._suite),
    ),

    raises_clause: _ => 'raises',

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    struct_definition: $ => seq(
      'struct',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('traits', optional($.argument_list)),
      ':',
      field('body', $._suite),
    ),

    trait_definition: $ => seq(
      'trait',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('traits', optional($.argument_list)),
      ':',
      field('body', $._suite),
    ),

    type_parameter: $ => seq(
      '[',
      commaSep1(choice(
        $.type,
        $.keyword_argument,
        $.infer_only_separator,
      )),
      optional(','),
      ']',
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    mojo_parameter: $ => prec.dynamic(1, seq(
      field('convention', $.argument_convention),
      field('name', $.identifier),
      optional(seq(
        ':',
        field('type', $.type),
      )),
    )),

    argument_convention: $ => choice(
      'owned', 'borrowed', 'inout', 'mut', 'read',
      'out', 'var', 'deinit',
      seq('ref', optional(seq('[', field('lifetime', $.identifier), ']'))),
    ),

    list_splat_pattern: $ => seq(
      '*',
      choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
    ),

    variable_declaration: $ => seq(
      'var',
      field('name', $.identifier),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('value', $._right_hand_side))),
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $.yield,
    ),

    ellipsis: _ => '...',

    typed_parameter: $ => prec(PREC.typed_parameter, seq(
      choice(
        $.identifier,
        $.list_splat_pattern,
        $.dictionary_splat_pattern,
      ),
      ':',
      field('type', $.type),
    )),

    type: $ => choice(
      prec(1, $.expression),
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
    ),
    generic_type: $ => prec(1, seq(
      choice(
        $.identifier,
        alias('type', $.identifier),
      ),
      $.type_parameter,
    )),
    list: $ => seq(
      '[',
      optional($._collection_elements),
      ']',
    ),

    _collection_elements: $ => seq(
      commaSep1(choice(
        $.expression, $.yield, $.list_splat, $.parenthesized_list_splat,
      )),
      optional(','),
    ),

    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    keyword_separator: _ => '*',
  },
});

module.exports.PREC = PREC;

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ',');
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
