test/corpus/var_parameter_convention.txt
==================
var convention on typed parameter
==================

fn f(var x: Int):
    pass

---

(module
  (function_definition
    name: (identifier)
    parameters: (parameters
      (mojo_parameter
        convention: (argument_convention)
        name: (identifier)
        type: (type
          (identifier))))
    body: (block
      (pass_statement))))
